# ETBAL1

./: README.md
ET_L1_Laplace/lib/levmar_2.5/: CMakeLists.txt
ET_L1_Laplace/src/main/: CMakeLists.txt  main.cpp
data/pre-processing_simulated_data/: 20_points.txt  21_cameras.txt  40_points.txt  41_cameras.txt  60_points.txt  64_cameras.txt  change.py
data/pre-processing_simulated_data/changedata_output/: cams.txt  points2d.txt
data/real_data_initialized/Adhesion belt/changedata_output/: cams.txt  pts2d.txt  pts3d.txt  vmask.txt
data/real_data_initialized/Centriole/changedata_output/: cams.txt  pts2d.txt  pts3d.txt  vmask.txt
data/real_data_initialized/SNX3/changedata_output/: cams.txt  pts2d.txt  pts3d.txt
data/real_data_initialized/VEEV/changedata_output/: cams.txt  pts2d.txt  pts3d.txt  vmask.txt
data/real_data_initialized/Vibrio/changedata_output/: cams.txt  pts2d.txt  pts3d.txt  vmask.txt
src/main/: BA.cpp  BA.h  ba_L1_smoothing.cpp  ba_L1_smoothing.h
